1.0.10 [ Bug fix ] Fix VK Blocks Pro Slider Block alignfull

--- a/assets/_scss/_block_width.scss
+++ b/assets/_scss/_block_width.scss
@@ -19,3 +19,9 @@
 		max-width: 100vw;
 	}
 }
+
+.vk_slider {
+	&.alignfull {
+		width:100vw;
+	}
+}
